--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-copy": "~0.8.0",
     "grunt-text-replace": "~0.4.0",
     "grunt-banner": "~0.3.1",
+    "grunt-subgrunt": "~0.4.5",
     "jsep": "~0.3.0"
   }
 }
