--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-copy": "~0.8.0",
     "grunt-text-replace": "~0.4.0",
     "grunt-banner": "~0.3.1",
+    "grunt-zip": "~0.17.1",
 
     "tape": "~2.13.1",
     "tape-dom": "~0.0.10",
@@ -37,6 +38,7 @@
 
     "grunt-contrib-watch": "~0.6.1",
 
-    "grunt-includes": "~1.0.0"
+    "grunt-includes": "~1.0.0",
+    "grunt-sass": "~2.0.0"
   }
 }
