--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "grunt-contrib-watch": "~0.6.1",
 
     "grunt-includes": "~1.0.0",
-    "grunt-sass": "~2.0.0"
+    "grunt-sass": "~2.0.0",
+    
+    "bottlejs": "~1.5.0"
   }
 }
