--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-contrib-copy": "~0.8.0",
     "grunt-text-replace": "~0.4.0",
     "grunt-banner": "~0.3.1",
-    "grunt-zip": "~0.17.1",
+    "grunt-contrib-compress": "~1.4.1",
 
     "tape": "~2.13.1",
     "tape-dom": "~0.0.10",
