fixing official URL

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ylc",
   "description": "Yellow code - a jQuery plugin for 2-way data binding",
-  "homepage": "http://any3w.com/ylc",
+  "homepage": "http://any3w.com/ylc/index.html",
   "version": "0.99.13",
   "licence": "BSD-2-Clause",
   "author": {
