--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "grunt-text-replace": "~0.4.0",
     "grunt-banner": "~0.3.1",
     "grunt-contrib-compress": "~1.4.1",
+    
+    "browserify-derequire": "~0.9.4",
 
     "tape": "~2.13.1",
     "tape-dom": "~0.0.10",
@@ -42,5 +44,11 @@
     "grunt-sass": "~2.0.0",
     
     "bottlejs": "~1.5.0"
-  }
+  },
+
+  "scripts": {
+    "build": "npm install && grunt"
+  },
+  
+  "main": "dist/js/yellowCode.js"
 }
