making usable via NPM

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ylc",
   "description": "Yellow code - a jQuery plugin for 2-way data binding",
   "homepage": "http://any3w.com/ylc/index.html",
-  "version": "0.99.15",
+  "version": "0.99.18",
   "licence": "BSD-2-Clause",
   "author": {
     "name": "Pavel Rimsky",
@@ -49,6 +49,10 @@
   "scripts": {
     "build": "npm install && grunt"
   },
+
+  "files": [
+    "dist/js"
+  ],
   
   "main": "dist/js/yellowCode.js"
 }
